# roboracer_gazebo

./: .gitignore  CMakeLists.txt  README.md  TODO.md  package.xml  requirements.txt  setup.sh
.claude/projects/-home-chg-ws-gazebo-roboracer-src-unicorn-model/memory/: feedback_no_convert.md  feedback_no_delete.md
config/: MXswitch.config.yaml  unicorn_control.yaml
docs/: topics.md  vehicle-parameters.md
launch/: dual_unicorn.launch  icra_racetrack.launch  unicorn.launch
meshes/: mid360.stl
rviz/: urdf_config.rviz
scripts/: gt_pose_publisher.py  joy_to_ackermann.py  keyboard_teleop.py  obstacle_spawner.py  pcd_publisher.py  pose_teleport.py  simple_mux.py  twist_to_joints.py  viz_pose.py
src/: ackermann_to_cmd_vel.cpp
urdf/: macros.xacro  materials.xacro  unicorn.gazebo  unicorn.urdf  unicorn_l515.urdf  unicorn_l515_pitched.urdf
world/: icra_racetrack.world
world/mesh/: icra_racetrack.stl
