<?xml version="1.0"?>
<package format="2">
  <name>unicorn_model</name>
  <version>1.0.0</version>
  <description>Unicorn autonomous racing vehicle with Livox Mid-360</description>
  <maintainer email="dev@unicorn.racing">unicorn</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>controller_manager</depend>
  <depend>effort_controllers</depend>
  <depend>joint_state_controller</depend>
  <depend>livox_laser_simulation</depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
  </export>
</package>
